[gd_scene load_steps=21 format=3 uid="uid://cx04cdwk3r0ea"]

[ext_resource type="FontData" path="res://addons/Libre_Train_Sim_Editor/Data/Misc/Oswald-Regular.ttf" id="1"]
[ext_resource type="Texture2D" uid="uid://tlqcaj8o07tk" path="res://Resources/Basic/Textures/KS-Signal.png" id="2"]
[ext_resource type="ArrayMesh" uid="uid://cqjiocp6va6tb" path="res://Resources/Basic/KS-Sig.obj" id="3"]
[ext_resource type="Texture2D" uid="uid://cr30a7fyk4pt2" path="res://Resources/Basic/Textures/Black.png" id="5"]
[ext_resource type="Script" path="res://Resources/Basic/Signals/ScriptingDefault.gd" id="6"]

[sub_resource type="StandardMaterial3D" id="1"]
cull_mode = 2
albedo_texture = ExtResource( "2" )

[sub_resource type="StandardMaterial3D" id="2"]
albedo_color = Color(1, 0.00392157, 0.00392157, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy = 16.0

[sub_resource type="SphereMesh" id="3"]
radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="4"]
albedo_color = Color(0.992157, 0.0941176, 0.027451, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id="5"]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="StandardMaterial3D" id="6"]
albedo_color = Color(1, 0.658824, 0.00392157, 1)
emission_enabled = true
emission = Color(1, 0.513726, 0, 1)
emission_energy = 1.87

[sub_resource type="StandardMaterial3D" id="7"]
albedo_color = Color(0.992157, 0.658824, 0.027451, 1)
emission_enabled = true
emission = Color(1, 0.843137, 0, 1)
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="StandardMaterial3D" id="8"]
albedo_color = Color(0.00392157, 1, 0.0196078, 1)
emission_enabled = true
emission = Color(0.196078, 1, 0, 1)
emission_energy = 1.87

[sub_resource type="StandardMaterial3D" id="9"]
albedo_color = Color(0.0588235, 0.992157, 0.027451, 1)
emission_enabled = true
emission = Color(0, 1, 0.0392157, 1)
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="Font" id="10"]
data/0 = ExtResource( "1" )

[sub_resource type="ViewportTexture" id="11"]

[sub_resource type="StandardMaterial3D" id="12"]
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission_texture = SubResource( "11" )

[sub_resource type="QuadMesh" id="13"]
size = Vector2(0.5, 0.6)

[sub_resource type="ViewportTexture" id="14"]

[sub_resource type="StandardMaterial3D" id="15"]
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission_texture = SubResource( "14" )

[node name="VisualInstance" type="Node3D"]
script = ExtResource( "6" )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.67658)
material_override = SubResource( "1" )
mesh = ExtResource( "3" )
surface_material_override/0 = null
script = null

[node name="Red" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0203973, 4.27763, 1.71823)
material_override = SubResource( "2" )
cast_shadow = 0
mesh = SubResource( "3" )
surface_material_override/0 = null
script = null

[node name="MeshInstance3D" type="MeshInstance3D" parent="Red"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
material_override = SubResource( "4" )
mesh = SubResource( "5" )
surface_material_override/0 = null
script = null

[node name="Orange" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00402704, 4.10741, 1.82482)
visible = false
material_override = SubResource( "6" )
cast_shadow = 0
mesh = SubResource( "3" )
surface_material_override/0 = null
script = null

[node name="MeshInstance2" type="MeshInstance3D" parent="Orange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
material_override = SubResource( "7" )
mesh = SubResource( "5" )
surface_material_override/0 = null
script = null

[node name="Green" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00639483, 4.10783, 1.60503)
visible = false
material_override = SubResource( "8" )
cast_shadow = 0
mesh = SubResource( "3" )
surface_material_override/0 = null
script = null

[node name="MeshInstance3" type="MeshInstance3D" parent="Green"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
material_override = SubResource( "9" )
mesh = SubResource( "5" )
surface_material_override/0 = null
script = null

[node name="Viewport" type="SubViewport" parent="."]
size = Vector2i(500, 600)
render_target_clear_mode = 2
script = null

[node name="Node2D" type="Node2D" parent="Viewport"]
z_as_relative = false
script = null

[node name="Sprite" type="Sprite2D" parent="Viewport/Node2D"]
position = Vector2(327.093, 387.386)
texture = ExtResource( "5" )
script = null

[node name="Label" type="Label" parent="Viewport/Node2D"]
modulate = Color(1, 0.470588, 0, 1)
theme_override_fonts/font = SubResource( "10" )
text = "50"
max_lines_visible = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport2" type="SubViewport" parent="."]
size = Vector2i(500, 600)
render_target_clear_mode = 2
script = null

[node name="Node2D" type="Node2D" parent="Viewport2"]
z_as_relative = false
script = null

[node name="Sprite" type="Sprite2D" parent="Viewport2/Node2D"]
position = Vector2(327.093, 387.386)
texture = ExtResource( "5" )
script = null

[node name="Label" type="Label" parent="Viewport2/Node2D"]
theme_override_fonts/font = SubResource( "10" )
text = "50"
max_lines_visible = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen1" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.62921e-07, 3.25841e-07, 1, 0, -0.641995, 2.09188e-07, 0.641995, 3.40811e-14, 1.04594e-07, -0.448292, 3.36503, 1.71943)
visible = false
material_override = SubResource( "12" )
mesh = SubResource( "13" )
surface_material_override/0 = null
script = null

[node name="Screen2" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.62921e-07, 3.25841e-07, 1, 0, -0.641995, 2.09188e-07, 0.641995, 3.40811e-14, 1.04594e-07, -0.0808081, 4.76666, 1.71943)
visible = false
material_override = SubResource( "15" )
mesh = SubResource( "13" )
surface_material_override/0 = null
script = null
